--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-
+langchain
+python-dotenv
+streamlit
+tiktoken
+faiss-cpu
+protobuf
+langchain_experimental
+mysql-connector-python
+pymysql
+sentence-transformers
+chromadb
