--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-langchain
-python-dotenv
 streamlit
-tiktoken
-faiss-cpu
-protobuf
-langchain_experimental
-mysql-connector-python
-pymysql
-sentence-transformers
-chromadb
-ChatGoogleGenerativeAI
+pandas
+langchain
+langchain-google-genai
+python-dotenv
+openpyxl
+xlrd
+google-generativeai
+python-json
